--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "nodemon": "^3.1.11",
